--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "debug.console.collapseIdenticalLines": false
+    "debug.console.collapseIdenticalLines": false,
+    "austin.path": ".venv\\Scripts\\austin.exe"
 }
